// [START declaration]
syntax = "proto2";
package seldon.protos;
// [END declaration]

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "v1.proto";

// [START java_declaration]
option java_package = "io.seldon.protos";
option java_outer_classname = "DeploymentProtos";
// [END java_declaration]

// [START messages]

message ClusterDef {}

message EndpointDef {

    enum EndpointType {
        REST = 0;
        GRPC = 1;
    }

    optional string service_host = 1;
    optional int32 service_port = 2;
    optional EndpointType type = 3;
}

message ClusterResourcesDef {

    optional string cpu = 1;
    optional string gpu = 2;
    optional string id = 3;
    optional string image = 4;
    optional string memory = 5;
    optional string version = 6;
}

message PredictiveUnitDef {

    enum ParamType {
      UNKNOWN_PARAMTYPE = 0;
      INT = 1;
      FLOAT = 2;
      DOUBLE = 3;
      STRING = 4;
    }

  enum PredictiveUnitType {
    UNKNOWN_TYPE = 0;
    ROUTER = 1;
    COMBINER = 2;
    MODEL = 3;
    TRANSFORMER = 4;
  }

  enum PredictiveUnitSubType {
    UNKNOWN_SUBTYPE = 0;
    MICROSERVICE = 1;
    SIMPLE_MODEL = 2;
    SIMPLE_ROUTER = 3;
    RANDOM_ABTEST = 4;
    AVERAGE_COMBINER = 5;
  }

  message ParamDef {
    optional string name = 1;
    optional ParamType type = 2;
    optional string value = 3;
  }

  repeated string children = 1;
  optional ClusterResourcesDef cluster_resources = 2;
  optional EndpointDef endpoint = 3;
  optional string name = 4;
  optional string id = 5;
  repeated ParamDef parameters = 6;
  optional PredictiveUnitSubType subtype = 7;
  optional PredictiveUnitType type = 8;
}

message PredictorDef {
  optional string id = 1;
  optional string name = 2;
  optional string version = 3;
  optional bool enabled = 4;
  optional EndpointDef endpoint = 5;
  repeated string imagePullSecrets = 6;
  repeated PredictiveUnitDef predictiveUnits = 7;
  optional int32 replicas = 8;
  optional string root = 9;
  map<string,string> annotations = 10;
}

message DeploymentDef {
  optional ClusterDef cluster = 1;
  optional string id = 2;
  optional string name = 3;
  optional PredictorDef predictor = 4;
  optional string uniqueName = 5;
  optional string oauth_key = 6;
  optional string oauth_secret = 7;
  optional PredictorDef predictor_canary = 8;
  map<string,string> annotations = 9;
}

message MLDeploymentStatus {
  optional int32 predictorReplicasReady = 1;
  optional int32 canaryReplicasReady = 2;
}

message MLDeployment {
  required string apiVersion = 1;
  required string kind = 2;
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 3;
  required DeploymentDef spec = 4;
  optional MLDeploymentStatus status = 5;
  optional k8s.io.api.core.v1.PodTemplateSpec componentSpec = 6;
}


// [END messages]

